# realtime-trading-platform

./: .env.sample  .gitignore  README.md  docker-compose.yaml
backend/: Dockerfile  coverage.json  coverage.md  entrypoint.sh  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 488cc3e4a3e2_price_history_and_orders.py  50fbd792b69c_oder_tables.py  92379367500d_user_tables.py  a16cbfaeb551_oder_tables.py  b8542cd60708_oder_tables.py
backend/app/: config.py  gunicorn.conf.py  server.py
backend/app/api/routers/: auth_routers.py  order_routers.py  price_routers.py  ws_router.py
backend/app/api/services/: auth_service.py  oder_book_service.py  oder_matching_service.py  order_book_service.py  order_matching_service.py  startup_service.py  ws_service.py
backend/app/core/: auth_dependencies.py
backend/app/database/: __init__.py
backend/app/database/enums/: oder_enums.py  user_enums.py
backend/app/database/models/: __init__.py  order_models.py  price_models.py  trade_models.py  user_models.py
backend/app/schemas/: auth_schemas.py  order_schemas.py  price_schemas.py  trade_scehmas.py  ws_schemas.py
backend/app/util/: auth_util.py
backend/test/: test_auth_dependencies.py  test_auth_routes.py  test_auth_service.py  test_auth_util.py  test_order_book.py  test_order_book_service.py  test_order_matching.py  test_order_matching_service.py  test_order_routes.py  test_price_routes.py  test_startup_service.py  test_ws_router.py  test_ws_schemas.py  test_ws_service.py
frontend/: .env.sample  Dockerfile  index.html  package.json
(+22 files in other folders)
